agregue balance
